--- a/11-Arrays-Bankist/starter/style.css
+++ b/11-Arrays-Bankist/starter/style.css
@@ -94,7 +94,7 @@ nav {
   gap: 2rem;
 
   /* NOTE This creates the fade in/out anumation */
-  opacity: 0;
+  /* opacity: 0; */
   transition: all 1s;
 }
 
@@ -158,7 +158,7 @@ nav {
   background-image: linear-gradient(to top left, #39b385, #9be15d);
 }
 
-.movements__type--withdrawal {
+.movements__type--withdraw {
   background-image: linear-gradient(to top left, #e52a5a, #ff585f);
 }
 
@@ -243,9 +243,11 @@ h2 {
 .form.form--loan {
   grid-template-columns: 2.5fr 1fr 2.5fr;
 }
+
 .form__label--loan {
   grid-row: 2;
 }
+
 /* End exceptions */
 
 .form__input {
